microservices/k8s_objects/posts.yml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: posts
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: posts
    template:
      metadata:
        labels:
          app: posts
      spec:
        containers:
        - name: posts
          image: subaniprasad/micro_posts:v1
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: posts
    name: posts
  spec:
    ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: posts
    type: NodePort
