microservices/k8s_objects/users.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: subaniprasad/micro_users:v1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users
  name: users
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: users
  type: NodePort
